font scaling implemented

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -96,7 +96,7 @@
               <div class="stat-icon">
                 <i class="fas fa-map-marker-alt"></i>
               </div>
-              <span class="stat-value">Victoria Island</span>
+              <span class="stat-value">VI</span>
               <span class="stat-label">Location</span>
             </div>
             <div class="stat">
