--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -58,7 +58,7 @@
       </div>
       <div class="spec">
         <i class="fas fa-users"></i>
-        <span>{{ apartment().specifications.maxGuests }}</span>
+        <span>{{ getMaxGuests() }}</span>
       </div>
     </div>
 
